# colab-gsoc2019-Jeevan_Kumar

./: README.md
AppConfig/: AppConfig.pro  appconfig.cpp  appconfig.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
DetectionSuit/DeepLearningSuite/: CMakeLists.txt
DetectionSuit/DeepLearningSuite/DatasetEvaluationApp/: main.cpp
DetectionSuit/DeepLearningSuite/DeepLearningSuiteLib/: CMakeLists.txt
DetectionSuit/DeepLearningSuite/detection_suite/: CMakeLists.txt  package.xml
Last week/Simple test/: cmake-hello-world_1.0-1.debian.tar.xz  cmake-hello-world_1.0-1.dsc  cmake-hello-world_1.0-1_amd64.build  cmake-hello-world_1.0-1_amd64.changes  cmake-hello-world_1.0-1_amd64.deb
Last week/detection suite _debian/debian/: README.Debian  changelog  control  copyright  rules
Playback/: Playback.cpp  Playback.hpp
appconfig/: Appconfig.ui  CMakeLists.txt  appConfig.cpp  appConfig.h  appconfig.pro  exec.cpp
docs/: README.md  _config.yml  about.html  about.md  config.yml  index.html  search.html  staticman.yml  tagify.py
docs/_includes/: comments.html  nav.html  paginator.html  posts.html  write_comment.html
docs/_layouts/: default.html  post.html
docs/_posts/gsoc/: 2019-06-02-Week_1.md  2019-06-09-Week_2.md  2019-06-13-Week_3_pre.md  2019-06-21-Week_4.md  2019-06-21-Week_4_1.md  2019-06-22-Week_4.md  (+7 more)
docs/_site/: 404.html  Week_1.html  Week_2.html  Week_3_pre.html  about.html  archive.html  atom.xml  index.html  sitemap.xml
docs/css/: big.css  main.css  small.css
docs/script/: main.js  search.js
docs/tags/: Life.html  Technology.html
(+66 files in other folders)
